--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,328 @@
-.App {
+/* Base Styles */
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 300;
+}
+h1, h2, h3, h4 {
+  font-family: 'Cormorant Upright', serif;
+  font-weight: 700;
+}
+
+h1 {
+  animation: easein 3s;
+  color: #71A4A4;
+  display: inline-block;
+  padding: 0;
   text-align: center;
+  width: 30%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+
+.full-width {
+  display: inline-block;
+  width: 100%;
+}
+.half-width, .third-width, .fourth-width {
+  display: inline-block;
 }
 
-.App-header {
-  background-color: #282c34;
+/* Hero */
+#hero {
+  background: url('./hero.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  height: 100vh;
+}
+
+nav {
+  display: inline-block;
+  float: right;
+  text-align: center;
+  text-transform: uppercase;
+  width: 65%;
+}
+
+nav ul li {
+  list-style: none;
+  padding: 10px;
+}
+
+
+nav ul li a {
+  text-decoration: none;
+  color: black;
+  padding: 10px;
+}
+
+nav ul li:hover {
+  background-color: #E0EBEB;
+}
+
+/* About */
+#about  {
+  min-height: 75vh;
+}
+#about h2 {
+  padding-left: 0;
+}
+#about .half-width {
+  font-size: 18px;
+  padding: 1.2em;
+  line-height: 1.4em;
+  margin-left: 1em;
+}
+#about a {
+  color: #71A4A4;
+  text-decoration: none;
+}
+#about a:hover {
+    font-weight: bold;
+}
+
+/* Technology */
+#tech {
+  clear: both;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  line-height: 1.5em;
+  min-height: 80vh;
+}
+#tech .third-width {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: center;
+}
+#tech h3 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 21px;
+  font-weight: 600;
+}
+#tech p {
+  font-size: 1.1em;
+  text-align: left;
+  min-height: 75px;
+}
+#tech i {
+  color: #5A8383;
+  font-size: 3em;
+  padding: .25em;
+}
+#tech #react {
+  animation: rotate 3s infinite linear;
+}
+
+
+/* Work */
+#work {
+  margin-top: 5%;
   min-height: 100vh;
+}
+#work h2 {
+  padding-bottom: 2em;
+}
+#work .half-width {
+  margin-bottom: 3em;
+}
+.row {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.thumbnail {
+  width: 250px;
+  height: 190px;
+  padding: 1em;
+}
+.thumbnail:hover, .logo:hover {
+  transform: scale(1.1);
+  -webkit-transition:all 0.3s linear;
+  -moz-transition:all 0.3s linear;
+  -ms-transition:all 0.3s linear;
+  -o-transition:all 0.3s linear;
+  transition:all 0.3s linear;
+}
+#work .half-width p {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  width: 100%;
+}
+
+.img-container {
+  min-height: 230px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+.img-container p {
+
 }
 
-@keyframes App-logo-spin {
+#upworthy-logo {
+  width: 50%;
+}
+#upworthy{
+}
+#swaay-logo {
+  width: 75%;
+}
+#swaay{
+  
+}
+/* Contact */
+#contact-img {
+  height: auto;
+  padding: 2em;
+  width: 90%;
+}
+#contact-info {
+  width: 50%;
+  padding-top: 2em;
+}
+#contact ul {
+  padding-top: 10%;
+  text-align: center;
+}
+#contact ul li {
+  display: inline-block;
+  list-style: none;
+  padding: 1em;
+  text-align: center;
+}
+#contact ul li a {
+  color: #71A4A4;
+  text-decoration: none;
+  font-size: 2.5em;
+}
+#contact ul li a i {
+
+}
+#contact ul li a i:hover {
+  color: #385252;
+}
+
+/* Footer */
+footer {
+  padding: 1em;
+  text-align: center;
+}
+
+/* Animations */
+@keyframes rotate {
   from {
     transform: rotate(0deg);
   }
   to {
-    transform: rotate(360deg);
+    transform: rotate(359deg);
+  }
+}
+
+@keyframes easein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 400px) {
+  nav ul li {
+    display: block;
+  }
+  nav ul li a {
+    margin: .25em;
+    padding: .25em;
+  }
+  #about h2 {
+    margin: 1em;
+  }
+  #about .half-width {
+    float: none;
+    padding: 1em;
+    line-height: 1.4em;
+    margin-left: 5%;
+    margin-right: 5%;
+    width: 85%;
+  }
+
+  #tech .third-width {
+    float: none;
+    margin-left: 10%;
+    margin-right: 10%;
+    width: 70%;
+  }
+}
+@media (min-width: 576px) {
+  #tech .fourth-width {
+    padding: 2%;
+    width: 40%;
+  }
+
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  #about .half-width {
+    margin-left: 1%;
+    margin-right: 1%;
+  }
+  #about .half-width, .half-width {
+    float: left;
+    height: 100%;
+    width: 45%;
+  }
+  #work .fourth-width {
+    width: 30%;
+  }
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  nav {
+    width: 70%;
+  }
+  nav ul li {
+    display: inline-block;
+    padding: 1em;
+  }
+  #work .fourth-width {
+    width: 30%;
+  }
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+  /* Base Styles */
+  h1 {
+    font-size: 2em;
+  }
+  h2 {
+    font-size: 1.7em;
+    padding-left: 1.2em;
+  }
+
+  /* Technology */
+
+  #tech .third-width {
+    float: left;
+    padding: 1em;
+    margin: 0 auto;
+    overflow: auto;
+    text-align: center;
+    width: 30%;
+  }
+  #work .fourth-width {
+    float: left;
+    padding: 2%;
+    width: 20%;
   }
 }
